# Test

./: README.md  package-lock.json  package.json  server.js  server.py
FIleManager/: migrate.js  package.json  server.js
FIleManager/migrations/: 001_init.sql
File-Uploader/: mount.sh  server.js
File-Uploader/public/: index.html
FileManagerWeb_Project/: package.json  server.js
FileManagerWeb_Project/public/: client.js
FileManagerWeb_Project/views/: dashboard.ejs  login.ejs  requests.ejs
SecureZipTransfer/: requirements.txt
SecureZipTransfer/client/: client.py
SuperSec/: package.json  server.js
SuperSec/public/: app.html  index.html
image-server/: package.json  server.js
image-server/public/: login.html  style.css
media-gallery-app/docker/: Dockerfile  docker-compose.yml
media-gallery-app/nginx/: mediaapp.conf
media-gallery-app/scripts/: configure-usb-automount.sh  package.sh  setup-fedora.sh
media-gallery-app/server/: package.json
media-gallery-app/systemd/: mediaapp.service  mnt-media.automount
media-gallery-app/udev/: 99-media-automount.rules
media-gallery-app/web/: tailwind.config.cjs
public/: index.html  login.html  upload.html
scripts/: create-env.sh  index-media-once.sh
server/src/: config.js  indexer-runner.js
server/tests/: auth.test.js
systemd/: mnt-media.mount
tauri_backup_app/: README.md
tauri_backup_app/server/: Cargo.toml
tauri_backup_app/server/migrations/: 001_init.sql
tauri_backup_app/server/src/: main.rs
usb_gallery_project/: README.md  package.json  server.js
web/: index.html  package.json
(+49 files in other folders)
