[package]
name = "tauri_backup_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-actix-native-tls", "macros"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
argon2 = "0.4"
hex = "0.4"
futures = "0.3"
sha2 = "0.10"
anyhow = "1.0"
mime_guess = "2.0"
chrono = "0.4"
